CRM-stack/templates/crm-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crm-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crm
  template:
    metadata:
      labels:
        app: crm
    spec:
      containers:
        - name: crm-demo
          image: pwstaging/demo-crm:latest
          ports:
            - containerPort: 3000
