CRM-stack/templates/crm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm-service
spec:
  selector:
    app: crm
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
