CRM-stack/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crm-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: liormcrm.ddnsking.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crm-service
            port:
              number: 80
